--- a/style.css
+++ b/style.css
@@ -10,24 +10,45 @@ body {
 h1 {
     color:white;
     background-color: #4F6B6A;
+    margin-top: 10px;
     
 }
 
 h2 {
     color: white;
     background-color: #4F6B6A;
+    margin: 0;
+    
 }
 
 p{
     text-align: justify;
 }
 
-.titulos{
+.titulo{
+    height: 40px;
+    width: 100px;
     border: 3px solid black;
-    padding: 20px;
-    text-align: justify;
+    padding: 5px;
+    text-align: center;
+    background-color: #4F6B6A;
+    border-radius: 5px;
+    margin: 5px;
+    font-size: 13px;
 }
+
 
 #gustavoguanabara{
     text-align: center;
 }
+
+#titulo-principal{
+    border: 3px solid black;
+    background-color: #4F6B6A;
+    margin: 35px;
+    text-align: center;
+    padding: 5px;
+    border-radius: 5px;
+    height: 60px;
+}
+
