--- a/style.css
+++ b/style.css
@@ -1,28 +1,27 @@
 @charset "UTF-8";
 
-body {
+.caixas{
+    text-align: justify;
+    border: 3px solid black;
+    margin: 10px;
+    padding: 10px;
     background-image: linear-gradient(to bottom, #4EC0BA, #38EBE2, #5B9996);
+}
+
+mark{
+    background-color: #4F6B6A;
+}
+
+body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 16px;
+    background-color: #a3dfdc;
     text-align: justify;
 }
 
-h1 {
+h1, h2 {
     color:white;
     background-color: #4F6B6A;
     margin-top: 10px;
-    
-}
-
-h2 {
-    color: white;
-    background-color: #4F6B6A;
-    margin: 0;
-    
-}
-
-p{
-    text-align: justify;
 }
 
 .titulo{
@@ -42,7 +41,7 @@ p{
     text-align: center;
 }
 
-#titulo-principal{
+.titulo-principal{
     border: 3px solid black;
     background-color: #4F6B6A;
     margin: 35px;
@@ -50,5 +49,21 @@ p{
     padding: 5px;
     border-radius: 5px;
     height: 60px;
+    
+}
+
+.sub-titulos{
+    margin: 5px;
+    padding: 6px;
+    text-align: center;
+    border: 3px solid black;
+    border-radius: 5px;
+}
+
+#cascata{
+    width: 800px;
+    height: 450px;
+    margin: 10px;
+    padding-left: 230px;
 }
 
