--- a/style.css
+++ b/style.css
@@ -29,11 +29,12 @@ h1, h2 {
     width: 100px;
     border: 3px solid black;
     padding: 5px;
-    text-align: center;
     background-color: #4F6B6A;
     border-radius: 5px;
-    margin: 5px;
+    margin: 50px;
     font-size: 13px;
+    display: inline-block;
+    text-align: center;
 }
 
 
